test_cases/negative/double_return.snek
def Double(value) {
    return Add(value, value);
    return Add(value, value);
}

export DEFAULT = Double(10);
